zero-cost-templating/tests/ui/compile_fail/wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/wrong_type.rs:22:26
   |
22 |     let test: String = { template.test_template12() };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `()`
